--- a/templates/extractor.hbs
+++ b/templates/extractor.hbs
@@ -12,6 +12,7 @@
     </div>
     <div class="flexrow">
         <div class="flexcol">
+            <input type="number" name="object.activePage" value="{{this.object.activePage}}">
             <div>
                 <canvas id="the-canvas" style="border:1px solid black;"></canvas>
                 <div id="text-layer" class="textLayer"></div>
