folders and chapters OK !

--- a/templates/extractor.hbs
+++ b/templates/extractor.hbs
@@ -17,6 +17,7 @@
                     <input disabled type="number" id="maxPage" name="maxPage" value="{{maxPage}}">
                 </div>
                 <a id="pdfNext"><i class="far fa-caret-square-right"></i></a>
+               
             </div>
         <div class="form-fields">
             {{filePicker target="pdfUrl" }}
@@ -26,6 +27,7 @@
         <a id="scanPage">
             <i class="fab fa-searchengin"></i>scan
         </a>
+         <a id="createJournal"><i class="fas fa-magic"></i></i>create</a>
 
     </div>
 
