--- a/templates/extractor.hbs
+++ b/templates/extractor.hbs
@@ -1,9 +1,8 @@
 {{log this}}
 <form action="" id="pdfExtractor">
-
     <h3>{{pdfUrl}}</h3>
     <div class="flexrow">
-
+        sdfsqdfqsdfsqdfsqdfsqdfsqdfsqdf
         <div class="form-fields">
             {{filePicker target="pdfUrl" }}
             <input type="text" id="pdfUrl" name="pdfUrl" placeholder="{{localize
