--- a/styles/module.css
+++ b/styles/module.css
@@ -72,9 +72,22 @@ input[disabled]#maxPage {
     height: 90%;
 }
 
-a#createJournal {
+a#createJournal,
+a#getContent {
     text-align: center;
     border: 1px solid white;
     margin: 5px;
     padding-top: 10px;
+}
+
+div.centeredCol {
+    position: relative;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0px 5%;
+}
+
+div.centeredCol span {
+    position: absolute;
+    /* padding-left: 6em; */
 }
