--- a/templates/extractor.hbs
+++ b/templates/extractor.hbs
@@ -16,6 +16,9 @@
         <a id="createJournal">
             <i class="fas fa-magic"></i>create
         </a>
+        <a id="getContent">
+            <i class="fas fa-magic"></i>getContent
+        </a>
 
     </div>
 
