--- a/pdfjs/web/viewer.css
+++ b/pdfjs/web/viewer.css
@@ -21,7 +21,7 @@
   right: 0;
   bottom: 0;
   overflow: hidden;
-  opacity: 0.2;
+  /* opacity: 0.2; */
   line-height: 1;
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
@@ -31,7 +31,7 @@
 
 .textLayer span,
 .textLayer br {
-  color: transparent;
+  /* color: transparent; */
   position: absolute;
   white-space: pre;
   cursor: text;
