--- a/styles/module.css
+++ b/styles/module.css
@@ -26,7 +26,7 @@ input[disabled]#maxPage {
     color: black
 }
 
-#pdfContainer {
+#pdfReader {
     position: relative;
     user-select: auto;
     resize: both;
@@ -56,18 +56,14 @@ input[disabled]#maxPage {
     text-align: center;
 }
 
+
 #pdfLoading i {
-    font-size: 156px;
-    margin-right: 60px;
+    font-size: 600px;
+
+
 }
 
-#pdfLoading i.fa-spinner {
-    font-size: 306px;
-
-    animation: rotation 2s infinite linear;
-}
-
-#pdfReader {
+#pdfReader iframe {
     width: 100%;
     height: 90%;
 }
