--- a/styles/module.css
+++ b/styles/module.css
@@ -63,9 +63,14 @@ input[disabled]#maxPage {
 
 }
 
-#pdfReader iframe {
+#pdfReader {
     width: 100%;
-    height: 90%;
+    min-height: 90%;
+    flex: 3
+}
+
+.main {
+    min-height: 90%
 }
 
 a#createJournal,
