--- a/pdfjs/web/viewer.css
+++ b/pdfjs/web/viewer.css
@@ -31,7 +31,7 @@
 
 .textLayer span,
 .textLayer br {
-  /* color: transparent; */
+  color: transparent;
   position: absolute;
   white-space: pre;
   cursor: text;
